tests/baselines/reference/duplicateClassElements.errors.txt
==== tests/cases/compiler/duplicateClassElements.ts (6 errors) ====
    class a {
        public a;
        public a;
               ~
!!! error TS2000: Duplicate identifier 'a'.
        public b() {
        }
        public b() {
        ~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2000: Duplicate identifier 'b'.
        public x;
        get x() {
            ~
!!! error TS2000: Duplicate identifier 'x'.
            return 10;
        }
        set x(_x: number) {
        }
    
        get y() {
            return "Hello";
        }
        set y(_y: string) {
        }
    
        public z() {
        }
        get z() {
            ~
!!! error TS2000: Duplicate identifier 'z'.
            return "Hello";
        }
        set z(_y: string) {
        }
    
        get x2() {
            return 10;
        }
        set x2(_x: number) {
        }
        public x2;
               ~~
!!! error TS2000: Duplicate identifier 'x2'.
    
        get z2() {
            return "Hello";
        }
        set z2(_y: string) {
        }
        public z2() {
        ~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2000: Duplicate identifier 'z2'.
    
    }